--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-table td{border-bottom:1px solid #ccc;padding:4px;margin:0}
+body {
+    background-color: deepskyblue;
+    text-align: center;
+}
+
+.card {
+    border-style: solid;
+    border-width: 1px;
+    margin-bottom: 10px;
+    margin-left: 500px;
+    margin-right: 500px;
+}
